--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "next": "14.2.7",
@@ -23,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
