--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "ts-node": "^10.9.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
